--- a/templates/ticket/index.html.twig
+++ b/templates/ticket/index.html.twig
@@ -11,6 +11,7 @@
         <tr>
             <th>Lot</th>
             <th>Nombre de Tickets</th>
+            <th>Nombre de Tickets</th>
         </tr>
     </thead>
     <tbody>
